rocketMQ配置，未完全完成

--- a/src/back-end/build.gradle
+++ b/src/back-end/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     compile group: 'com.github.pagehelper', name: 'pagehelper', version: '5.1.11'
     compile group: 'com.alibaba', name: 'druid', version: '1.1.12'
     compile group: 'com.jcraft', name: 'jsch', version: '0.1.55'
+
+    compile group: 'org.apache.rocketmq', name: 'rocketmq-spring-boot-starter', version: '2.1.0'
 }
 
 test {
