统一REST风格错误响应, 可通过添加错误码ErrorCode描述错误状态, 不应为每种资源新建异常,例如UserNotFoundException将不被推荐

--- a/src/back-end/build.gradle
+++ b/src/back-end/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     }
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 
+    compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.3.1.RELEASE'
+
+
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.72'
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.0'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.0'
