--- a/src/back-end/build.gradle
+++ b/src/back-end/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
     testImplementation 'org.springframework.amqp:spring-rabbit-test'
+
+    compile 'joda-time:joda-time:2.9.9'
 }
 
 test {
