--- a/src/back-end/src/main/resources/application.yml
+++ b/src/back-end/src/main/resources/application.yml
@@ -7,3 +7,7 @@ mybatis:
   mapper-locations: classpath:mybatis/mapper/*.xml #映射配置文件
   config-location: classpath:mybatis/mybatis-config.xml #核心配置文件
 
+spring:
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
