--- a/src/back-end/src/main/resources/application.properties
+++ b/src/back-end/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 logging.level.com.tcsquad.ilogistics.mapper=debug
 
 #添加数据源配置
-spring.profiles.include=datasource,messagequeue
+spring.profiles.include=datasource,messagequeue,oss
