添加了地图服务（查找起点到一组终点的距离；通过地址查找经纬度）

--- a/src/back-end/.gitignore
+++ b/src/back-end/.gitignore
@@ -33,6 +33,7 @@ out/
 /src/main/resources/application-datasource.yml
 /src/main/resources/application-messagequeue.yml
 /src/main/resources/application-oss.yml
+/src/main/resources/application-baidumap.yml
 
 ## .DS_store
 *.DS_Store
