--- a/src/back-end/.gitignore
+++ b/src/back-end/.gitignore
@@ -40,4 +40,8 @@ out/
 .DS_Store
 .DS_Store?
 *.swp
-*.swo
+*.swoapplication-baidumap.yml
+application-baidumap.yml
+application-baidumap.yml
+application-baidumap.yml
+application-baidumap.yml
