--- a/src/back-end/.gitignore
+++ b/src/back-end/.gitignore
@@ -40,8 +40,4 @@ out/
 .DS_Store
 .DS_Store?
 *.swp
-*.swoapplication-baidumap.yml
-application-baidumap.yml
-application-baidumap.yml
-application-baidumap.yml
-application-baidumap.yml
+*.swo
