--- a/src/back-end/.gitignore
+++ b/src/back-end/.gitignore
@@ -34,6 +34,7 @@ out/
 /src/main/resources/application-messagequeue.yml
 /src/main/resources/application-oss.yml
 /src/main/resources/application-baidumap.yml
+/src/main/resources/application-mail.yml
 
 ## .DS_store
 *.DS_Store
