修复了更新调货单RemainNum的bug, 当缺货时能正确 更新/生成调货单

--- a/src/back-end/src/main/resources/application.properties
+++ b/src/back-end/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #输出sql语句
-logging.level.com.tcsquad.ilogistics.mapper=debug
+#logging.level.com.tcsquad.ilogistics.mapper=debug
+logging.level.com.tcsquad.ilogistics.service=debug
 
 #添加数据源配置
 spring.profiles.include=datasource,messagequeue,oss,baidumap
