--- a/src/front-end/package.json
+++ b/src/front-end/package.json
@@ -13,10 +13,19 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/vue-fontawesome": "^0.1.10",
+    "amqplib": "^0.6.0",
+    "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
+    "qs": "^6.9.4",
+    "stompjs": "^2.3.3",
     "vue": "^2.6.11",
-    "vue-router": "^3.3.4"
+    "vue-baidu-map": "^0.21.22",
+    "vue-chartjs": "^3.5.0",
+    "vue-funnel-graph-js": "^0.1.8",
+    "vue-router": "^3.3.4",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
